частично исправлена папка templates

--- a/yatube/templates/includes/post.html
+++ b/yatube/templates/includes/post.html
@@ -1,7 +1,8 @@
 <article>
   <ul>
     <li>
-      Автор: {{ post.author.get_full_name }} <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
+      Автор: {{ post.author.get_full_name }} <a href="{% url 'posts:profile' post.author %}">
+        все посты пользователя</a>
     </li>
     <li>
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
