--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -10,6 +10,6 @@
       {% include 'includes/post.html' %}
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
-    {% include 'posts/includes/paginator.html' %}
+    {% include 'includes/paginator.html' %}
   </div>
 {% endblock %}
