--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,6 +7,6 @@
       {% include 'includes/post.html' %}    
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
-    {% include 'posts/includes/paginator.html' %} 
+    {% include 'includes/paginator.html' %} 
   </div>
 {% endblock %}
