Доделана папка templates

--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -12,6 +12,7 @@
     <div class="col-md-8 p-5">
       <div class="card">
         <div class="card-header">
+          {% load user_filters %}
           {% if is_edit %}
             Редактировать запись
           {% else %}
@@ -19,35 +20,44 @@
           {% endif %}
         </div>
         <div class="card-body">
-          <form method="post" action="">
-            {% csrf_token %}
-            <div class="form-group row my-3 p-3">
-              <label for="id_text">
-                Текст поста
-                <span class="required text-danger">*</span>
-              </label>
-              <textarea name="text" cols="40" rows="10" class="form-control" required id="id_text">
-                {% if is_edit %}{{ text }}{% else %}{% endif %}
-              </textarea>
-              <small id="id_text-help" class="form-text text-muted">
-                {% if is_edit %}
-                  Редактировать запись
-                 {% else %}
-                   текст нового поста
-                   {% endif %}
-              </small>
-            </div>
-            <div class="form-group row my-3 p-3">
-              <label for="id_group">
-                Группа
-              </label>
-              <select name="group" class="form-control" id="id_group">
-                <option>{% for group in form.group %}{{ group }}{% endfor %}</option>
-              </select>
-              <small id="id_group-help" class="form-text text-muted">
-                Группа, к которой будет относиться пост
-              </small>
-            </div>
+          {% load user_filters %}
+          {% if form.errors %}
+            {% for field in form %} 
+              {% for error in field.errors %}            
+                <div class="alert alert-danger">
+                  {{ error|escape }}
+                </div>
+              {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+              <div class="alert alert-danger">
+                {{ error|escape }}
+              </div>
+            {% endfor %}
+          {% endif %}
+          {% if is_edit %}
+            <form method="post" action="{% url 'posts:post_edit' post_id %}">
+          {% else %}
+            <form method="post" action="{% url 'posts:post_create' %}">
+          {% endif %}
+          {% csrf_token %}
+            {% for field in form %} 
+              <div class="form-group row my-3">
+                <label for="{{ field.id_for_label }}">
+                  {{ field.label }}
+                    {% if field.field.required %}
+                      <span class="required text-danger">*</span>
+                    {% endif %}
+                </label>
+                {{ field|addclass:'form-control' }} 
+                  {% if field.help_text %}
+                    <small id="{{ field.id_for_label }}-help"
+                      class="form-text text-muted">
+                      {{ field.help_text|safe }}
+                    </small>
+                  {% endif %}
+              </div>
+            {% endfor %}
             <div class="d-flex justify-content-end">
               <button type="submit" class="btn btn-primary">
                 {% if is_edit %}
@@ -56,8 +66,8 @@
                   Добавить
                 {% endif %}
               </button>
-            </div>
-          </form>
+            </div>            
+          </form>          
         </div>
       </div>
     </div>
