--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -29,7 +29,7 @@
       <p>
         {{ post.text }}
       </p>
-      {% if username == request.user %}
+      {% if post.author == request.user %}
         <a class="btn btn-primary" href="{% url 'posts:post_edit' post.pk %}">
           редактировать запись
         </a>
