--- a/yatube/templates/includes/post.html
+++ b/yatube/templates/includes/post.html
@@ -11,7 +11,10 @@
   <p>{{ post.text|linebreaksbr }}</p> 
   <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
   <br>
-  {% if post.group %}   
-    <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы.</a>
+  {% if group == post.group %}
+  {% else %}
+    {% if post.group %}
+      <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы.</a>
+    {% endif %}
   {% endif %}
 </article>
